--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Sezar şifreleme yöntemi ile güzel bir şifreleme yöntemi :)",
     "type": "library",
     "license": "MIT",
+    "version": "1.1"
     "authors": [
         {
             "name": "omerfarukbicer0446",
